@@ -1,0 +1,1 @@
+{"access_token": "ya29.a0AfH6SMBkQMpdBjwVk4m8P9CvKpvuqSi8uLJc6c5UJrx0addyps4L83KhJOy7lUt88gaUvhSkpEv4UzA-uVy582vTmfVO1qgZmHRVc5qpQi2hNLN8rmUgbk-aZUGIn7ttBg9ke1pxx8QLyC33Cjc0L8swzvGnTQ", "client_id": "901857448933-immj7hkvc618r2hnm7130e3lanc535l5.apps.googleusercontent.com", "client_secret": "9x-dYlYsGstD97-e-y0dxnlr", "refresh_token": "1//03EcUCXRSno49CgYIARAAGAMSNwF-L9IrPO2h9H8oUJK-EUhlfNHt_4ouJdlZGtoebLrJskEUedypLiR28eEz2T4_IgLwxfWzzHY", "token_expiry": "2021-04-27T10:18:31Z", "token_uri": "https://oauth2.googleapis.com/token", "user_agent": null, "revoke_uri": "https://oauth2.googleapis.com/revoke", "id_token": null, "id_token_jwt": null, "token_response": {"access_token": "ya29.a0AfH6SMBkQMpdBjwVk4m8P9CvKpvuqSi8uLJc6c5UJrx0addyps4L83KhJOy7lUt88gaUvhSkpEv4UzA-uVy582vTmfVO1qgZmHRVc5qpQi2hNLN8rmUgbk-aZUGIn7ttBg9ke1pxx8QLyC33Cjc0L8swzvGnTQ", "expires_in": 3599, "scope": "https://www.googleapis.com/auth/youtube", "token_type": "Bearer"}, "scopes": ["https://www.googleapis.com/auth/youtube"], "token_info_uri": "https://oauth2.googleapis.com/tokeninfo", "invalid": false, "_class": "OAuth2Credentials", "_module": "oauth2client.client"}
