@@ -15,3 +15,4 @@ youtube-dl
 selenium
 arrow
 zulu
+telegram-send
